--- a/KretaWindowsAlkalmazas/Views/MainWindow.xaml
+++ b/KretaWindowsAlkalmazas/Views/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Kreta.View.MainWindow"
+﻿<Window x:Class="Kreta.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Kreta.View"
+        xmlns:local="clr-namespace:Kreta.Views"
         mc:Ignorable="d"
         Title="Kréta - iskolai adminisztrációs program" WindowState="Maximized">
     <Grid>
@@ -13,5 +13,11 @@
                 <MenuItem x:Name="miExit" Header="_Kilépés" Click="miExit_Click"></MenuItem>
             </MenuItem>
         </Menu>
+        <Grid x:Name="PageContent" VerticalAlignment="Top" Width="1024" Height="750">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock> Üdvözlöm a Kréta - iskolai adminisztráció nevezetű alkamlazásban!</TextBlock>
+            </StackPanel>
+
+        </Grid>
     </Grid>
 </Window>
