--- a/KretaWindowsAlkalmazas/Views/Pages/TeacherPage.xaml
+++ b/KretaWindowsAlkalmazas/Views/Pages/TeacherPage.xaml
@@ -8,6 +8,6 @@
              d:DesignHeight="800" d:DesignWidth="1024">
     <Grid Margin="30">
         <Label Content="A tanárok: "></Label>
-        <ListBox Margin="150 5 400 500" x:Name="lbTeacher" ItemsSource="{Binding Teachers}" DisplayMemberPath="TeacherName"></ListBox>
+        <ListBox Margin="150 5 400 500" x:Name="lbTeacher" ItemsSource="{Binding Teachers}"></ListBox>
     </Grid>
 </UserControl>
