--- a/KretaWindowsAlkalmazas/Views/MainWindow.xaml
+++ b/KretaWindowsAlkalmazas/Views/MainWindow.xaml
@@ -24,6 +24,7 @@
             <MenuItem Header="Adminisztráció">
                 <MenuItem x:Name="miStudentOfClass" Header="Osztályok tanulói" Click="miStudentOfClass_Click"></MenuItem>
                 <MenuItem x:Name="miTeachTeacherSubject" Header="Tanárok által tanított tantárgyak" Click="miTeachTeacherSubject_Click"></MenuItem>
+                <MenuItem x:Name="miParentsAdministration" Header="Szülői adminisztráció" Click="miParentsAdministration_Click"></MenuItem>
             </MenuItem>
         </Menu>
         <Grid x:Name="PageContent" VerticalAlignment="Top" Width="1024" Height="800" Margin="5 25 5 5">
