--- a/KretaRazorPages/Pages/Shared/_Layout.cshtml
+++ b/KretaRazorPages/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+        <div class="col-md-3">
+            @await Component.InvokeAsync("Subjects")
+        </div>
     </div>
 
     <footer class="border-top footer text-muted">
