--- a/KretaRazorPages/Pages/Shared/_Layout.cshtml
+++ b/KretaRazorPages/Pages/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Subject">Tantárgyak</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                     </ul>
@@ -34,9 +37,6 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
-        <div class="col-md-3">
-            @await Component.InvokeAsync("Subjects")
-        </div>
     </div>
 
     <footer class="border-top footer text-muted">
