--- a/KretaRazorPages/Pages/Subject.cshtml
+++ b/KretaRazorPages/Pages/Subject.cshtml
@@ -1,10 +1,8 @@
-﻿@page
+﻿@page "/subjects"
 @model KretaRazorPages.Pages.SubjectModel
 @{
     ViewData["Title"] = "Tantárgyak";
 }
-<div>
-    <div class="col-md-3">
-         @await Component.InvokeAsync("Subjects")
-    </div>
+<div class="col-md-3">
+        @await Component.InvokeAsync("Subjects")
 </div>
