Új tantárgy form

--- a/KretaRazorPages/Pages/Shared/Components/Subjects/Default.cshtml
+++ b/KretaRazorPages/Pages/Shared/Components/Subjects/Default.cshtml
@@ -8,7 +8,7 @@
             <h2 class="text-primary">Tantárgyak</h2>
         </div>
         <div class="col-15">
-            <a asp-page="subject/create" class="btn btn-primary">                
+            <a asp-page="/Menu/Subject/Create" class="btn btn-primary">                
                 Új tantárgy
             </a>
         </div>
