Új tantárgy id-je jó.

--- a/KretaRazorPages/Pages/Shared/_Layout.cshtml
+++ b/KretaRazorPages/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         Tantárgyak
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" asp-area="" asp-page="/Menu/Subject/Subject">Összes tantárgy...</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-page="/Menu/SubjectMenu/Subject">Összes tantárgy...</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
