--- a/KretaRazorPages/Pages/Menu/SubjectMenu/Subject.cshtml
+++ b/KretaRazorPages/Pages/Menu/SubjectMenu/Subject.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/subjects"
-@model KretaRazorPages.Pages.SubjectModel
+@model KretaRazorPages.Pages.Menu.SubjectMenu.SubjectModel
 @{
     ViewData["Title"] = "Tantárgyak";
 }
