--- a/KretaRazorPages/Pages/Menu/SubjectMenu/Create.cshtml
+++ b/KretaRazorPages/Pages/Menu/SubjectMenu/Create.cshtml
@@ -16,11 +16,11 @@
             <hr />
           </div>
           <div class="mb-3">
-            Id
+            Id: &nbsp; 
             <input asp-for="Subject.Id" type="text" value="@nextId" readonly/>
          </div>
          <div class="mb-3">
-            Név
+            Név: &nbsp;
             <input asp-for="Subject.SubjectName" class="form-control"/>
          </div>
          <button type="submit" class="btn btn-primary">Mentés</button>
