--- a/KretaRazorPages/Pages/Shared/Components/Subjects/Default.cshtml
+++ b/KretaRazorPages/Pages/Shared/Components/Subjects/Default.cshtml
@@ -7,9 +7,9 @@
         <div class="col-10">
             <h2 class="text-primary">Tantárgyak</h2>
         </div>
-        <div class="col-15">
+        <div class="col-15 text-end">
             <a asp-page="/Menu/SubjectMenu/Create" class="btn btn-primary">                
-                Új tantárgy
+               <i class="bi bi-pencil-square"></i> &nbsp;Új tantárgy
             </a>
         </div>
     </div>
