--- a/KretaRazorPages/Pages/Shared/_Layout.cshtml
+++ b/KretaRazorPages/Pages/Shared/_Layout.cshtml
@@ -3,16 +3,22 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - KretaRazorPages</title>
+    <title>@ViewData["Title"] - Iskolai adminisztráció</title>
+    <!--
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    https://bootswatch.com
+    -->
+    <link rel="stylesheet" href="~/css/bootswatch-cyborg.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/KretaRazorPages.styles.css" asp-append-version="true" />
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">KretaRazorPages</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Iskolai adminisztráció</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,12 +55,16 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - KretaRazorPages - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - Gyuris Csaba - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <!--
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    -->
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
