--- a/KretaRazorPages/Pages/Menu/SubjectMenu/Edit.cshtml
+++ b/KretaRazorPages/Pages/Menu/SubjectMenu/Edit.cshtml
@@ -1,5 +1,5 @@
-﻿@page "/subject/create"
-@model KretaRazorPages.Pages.Menu.SubjectMenu.CreateModel
+﻿@page "/subject/edit"
+@model KretaRazorPages.Pages.Menu.SubjectMenu.EditModel
 
 @using KretaRazorPages.Services;
 
@@ -11,20 +11,19 @@
 <form method="post">
      <div class="border p-3 mt-4">
          <div class="row pb-2"
-            <h2 class="text-primary pl-3">New subject:</h2>
+            <h2 class="text-primary pl-3">Új tantárgy adatai:</h2>
             <hr />
           </div>
           <div asp-validation-summary="All"></div>
           <div class="mb-3">
             <label asp-for="Subject.Id"></label>
-            <input asp-for="Subject.Id" type="text" value="@nextId" readonly/>
+            <input asp-for="SubjectIdToModify" type="text" value="@nextId" readonly/>
          </div>
          <div class="mb-3">
             <label asp-for="Subject.SubjectName"></label>
             <input asp-for="Subject.SubjectName" class="form-control"/>
             <span asp-validation-for="Subject.SubjectName" class="text-danger"></span>
          </div>
-         <button type="submit" class="btn btn-primary">Save</button>
-         <a asp-page="/Menu/SubjectMenu/Subject" class="btn btn-secondary">Back to list</a>
+         <button type="submit" class="btn btn-primary">Mentés</button>
      </div>
 </form>
