--- a/KretaRazorPages/Pages/Components/Subjects/default.cshtml
+++ b/KretaRazorPages/Pages/Components/Subjects/default.cshtml
@@ -40,7 +40,7 @@
                     <td>
                         <div class="w-75 btn-group" role="group">
                         <a asp-page="/Menu/SubjectMenu/Edit" asp-route-id="@subject.Id" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
-                        <!--<a asp-page="/Menu/SubjectMenu/Delete" asp-route-id="@subject.Id" class="btn btn-danger mx-2"><i class="bi bi-trash3"></i></a>-->
+                        <a asp-page="/Menu/SubjectMenu/Delete" asp-route-id="@subject.Id" class="btn btn-danger mx-2"><i class="bi bi-trash3"></i></a>
                      </div>
                     </td>
                 </tr>
