--- a/KretaRazorPages/Pages/Menu/SubjectMenu/Create.cshtml
+++ b/KretaRazorPages/Pages/Menu/SubjectMenu/Create.cshtml
@@ -25,6 +25,6 @@
             <span asp-validation-for="Subject.SubjectName" class="text-danger"></span>
          </div>
          <button type="submit" class="btn btn-primary">Save</button>
-         <a asp-page="/Menu/SubjectMenu/Subject" class="btn btn-secondary">Back to list</a>
+         <a asp-page="/Menu/SubjectMenu/Index" class="btn btn-secondary">Back to list</a>
      </div>
 </form>
