--- a/KretaRazorPages/Pages/Menu/SubjectMenu/Edit.cshtml
+++ b/KretaRazorPages/Pages/Menu/SubjectMenu/Edit.cshtml
@@ -21,5 +21,6 @@
          </div>
          <input hidden asp-for="SubjectIdToModify" />
          <button type="submit" class="btn btn-primary">Mentés</button>
+         <a asp-page="/Menu/SubjectMenu/Index" class="btn btn-secondary">Back to list</a>
      </div>
 </form>
