--- a/KretaRazorPages/Pages/Menu/SubjectMenu/Create.cshtml
+++ b/KretaRazorPages/Pages/Menu/SubjectMenu/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/subject/create"
 @model KretaRazorPages.Pages.Menu.SubjectMenu.CreateModel
 
-@using KretaRazorPages.Services;
+@using ServiceKretaAPI.Services
 
 @{
     var subjectService = new SubjectService();
