--- a/KretaRazorPages/Pages/Menu/SubjectMenu/Delete.cshtml
+++ b/KretaRazorPages/Pages/Menu/SubjectMenu/Delete.cshtml
@@ -1,10 +1,12 @@
-﻿@page "/subject/edit"
-@model KretaRazorPages.Pages.Menu.SubjectMenu.EditModel
+﻿@page
+@model KretaRazorPages.Pages.Menu.SubjectMenu.DeleteModel
+@{
+}
 
 <form method="post">
      <div class="border p-3 mt-4">
          <div class="row pb-2"
-            <h2 class="text-primary pl-3">Edig subject</h2>
+            <h2 class="text-primary pl-3">Delete subject</h2>
             <hr />
           </div>
           <div asp-validation-summary="All"></div>         
@@ -18,7 +20,7 @@
             <span asp-validation-for="Subject.SubjectName" class="text-danger"></span>
          </div>
          <input hidden asp-for="SubjectIdToModify" />
-         <button type="submit" class="btn btn-primary">Save</button>
+         <button type="submit" class="btn btn-danger">Delete</button>
          <a asp-page="/Menu/SubjectMenu/Index" class="btn btn-secondary">Back to list</a>
      </div>
 </form>
