--- a/KretaDesktop/App.xaml
+++ b/KretaDesktop/App.xaml
@@ -8,6 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/ViewModelViewDataTamplate.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/HeaderButtonTemplate.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Resources/MenuItemBaseStyle.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
