--- a/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
+++ b/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
@@ -5,5 +5,7 @@
     <DataTemplate DataType="{x:Type viewmodels:HeaderWithContentListViewModel}">
         <views:HeaderWithContentList></views:HeaderWithContentList>
     </DataTemplate>
-    
+    <DataTemplate DataType="{x:Type viewmodels:HeaderWithContentMoveViewModel}">
+        <views:HeaderWithContentMove></views:HeaderWithContentMove>
+    </DataTemplate>
 </ResourceDictionary>
