--- a/KretaDesktop/View/HeaderWithContentMove.xaml
+++ b/KretaDesktop/View/HeaderWithContentMove.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="KretaDesktop.View.HeaderWithContentList"
+﻿<UserControl x:Class="KretaDesktop.View.HeaderWithContentMove"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,14 +8,12 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="35" MinHeight="5" MaxHeight="35"></RowDefinition>
+            <RowDefinition Height="35"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Button Style="{DynamicResource HeaderButtonMenuItemEllpse}">Tantárgyak</Button>
-            <Button Style="{DynamicResource HeaderButtonMenuItemEllpse}">Tanárok</Button>
-            <Button Style="{DynamicResource HeaderButtonMenuItemEllpse}">Osztályok</Button>
+        <StackPanel Orientation="Horizontal">
+            <Button Style="{DynamicResource HeaderButtonMenuItemEllpse}">Osztályba</Button>
+            <Button Style="{DynamicResource HeaderButtonMenuItemEllpse}">Tantárgyat</Button>
         </StackPanel>
-        <ContentControl></ContentControl>
     </Grid>
 </UserControl>
