Tantárgyak kontent kész

--- a/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
+++ b/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
@@ -8,4 +8,7 @@
     <DataTemplate DataType="{x:Type viewmodels:HeaderWithContentMoveViewModel}">
         <views:HeaderWithContentMove></views:HeaderWithContentMove>
     </DataTemplate>
+    <DataTemplate DataType="{x:Type viewmodels:ContentListSubjectViewModel}">
+        <views:ContentListSubject></views:ContentListSubject>
+    </DataTemplate>
 </ResourceDictionary>
