--- a/KretaDesktop/Resources/HeaderButtonTemplate.xaml
+++ b/KretaDesktop/Resources/HeaderButtonTemplate.xaml
@@ -1,8 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
-    <SolidColorBrush x:Key="StandardButtonBackground" Color="#1C536F"></SolidColorBrush>
-    <SolidColorBrush x:Key="StandardButtonForeground" Color="#FEFEFE"></SolidColorBrush>
+
+    <SolidColorBrush x:Key="StandardButtonBackground" Color="#00202e"></SolidColorBrush>
+    <SolidColorBrush x:Key="StandardButtonForeground" Color="#ff8531"></SolidColorBrush>
     
     <Style TargetType="Button" x:Key="HeaderButtonMenuItemEllpse">
         <Setter Property="Background" Value="{StaticResource StandardButtonBackground}"></Setter>
