--- a/KretaDesktop/View/ContentListSubject.xaml
+++ b/KretaDesktop/View/ContentListSubject.xaml
@@ -10,15 +10,16 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <Label FontSize="16" HorizontalAlignment="Center" Foreground="{DynamicResource ContentForegroundColor}">Tantárgyak</Label>
         <Grid Grid.Row="1" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
-
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Margin="18 2 2 2" Foreground="{DynamicResource ContentForegroundColor}" Text="Szűrés:"></TextBlock>
             <TextBox Grid.Column="1" x:Name="tbFiltringSubjectName" Margin="2 2 20 2" 
@@ -27,13 +28,14 @@
                      Foreground="{DynamicResource ContentTextBoxForgraound}">
                 Valami
             </TextBox>
-            <StackPanel Grid.Column="2" Orientation="Horizontal">
-                <TextBlock  Margin="2" Foreground="{DynamicResource ContentForegroundColor}" Text="Rendezés:"></TextBlock>
+            <Button Grid.Column="2" Margin="12 2 32 2" Grid.Row="2" Width="100" Height="24" Content="Keresés" HorizontalAlignment="Left"></Button>
+            <StackPanel Grid.Column="3" Orientation="Horizontal">
+                <TextBlock  Margin="64 2 2 2" Foreground="{DynamicResource ContentForegroundColor}" Text="Rendezés:"></TextBlock>
                 <Grid Margin="2 0 0 2" Background="{DynamicResource ContentTextBoxBackground}" Height="16" Width="16">
                     <Image Source="{StaticResource content-sort-down}" />
                 </Grid>
             </StackPanel>
-            <StackPanel Grid.Column="3" Orientation="Horizontal" Margin="2 2 18 2">
+            <StackPanel Grid.Column="4" Orientation="Horizontal" Margin="2 2 18 2">
                 <TextBlock HorizontalAlignment="Right" Margin="2" Foreground="{DynamicResource ContentForegroundColor}" Text="Elem/oldal:"></TextBlock>
                 <ComboBox HorizontalAlignment="Right" Grid.Column="5">
                     <ComboBoxItem>10</ComboBoxItem>
@@ -41,8 +43,38 @@
                     <ComboBoxItem>30</ComboBoxItem>
                 </ComboBox>
             </StackPanel>
-
         </Grid>
+        <Expander Grid.Row="2" Header="Tantárgy adatai" Foreground="{DynamicResource ContentForegroundColor}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"></ColumnDefinition>
+                    <ColumnDefinition Width="200"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Label  Grid.Row="0" Grid.Column="0" Margin="18 2 2 2" Foreground="{DynamicResource ContentForegroundColor}" Content="Tantárgy id:"></Label>
+                <TextBox Grid.Row="0" Grid.Column="1" x:Name="tbSubjectId" Margin="2" 
+                     Width="200" HorizontalAlignment="Left"                         
+                     Background="{DynamicResource ContentTextBoxBackground}" 
+                     Foreground="{DynamicResource ContentTextBoxForgraound}">
+                    Id
+                </TextBox>
+                <Label  Grid.Row="1" Grid.Column="0" Margin="18 2 2 2" Foreground="{DynamicResource ContentForegroundColor}" Content="Tantárgy név:"></Label>
+                <TextBox Grid.Row="1" Grid.Column="1" x:Name="tbSubjectName" Margin="2" 
+                     Width="200" HorizontalAlignment="Left"                         
+                     Background="{DynamicResource ContentTextBoxBackground}" 
+                     Foreground="{DynamicResource ContentTextBoxForgraound}">
+                    SubjectName
+                </TextBox>
+                <Button Margin="100 2 2 2" Width="100" Height="24" Grid.Row="0" Grid.Column="2" Content="Mentés"></Button>
+                <Button Margin="100 2 2 2" Grid.Row="1" Width="100" Height="24" Grid.Column="2" Content="Törlés"></Button>
+                <Button Margin="2 8 2 2" Grid.Row="2" Width="100" Height="24" Grid.Column="1" Content="Új" HorizontalAlignment="Left"></Button>
+            </Grid>
+        </Expander>
 
     </Grid>
 </UserControl>
