Formázás előrehaladottan kész

--- a/KretaDesktop/App.xaml
+++ b/KretaDesktop/App.xaml
@@ -11,6 +11,7 @@
                 <ResourceDictionary Source="/Resources/MenuItemBaseStyle.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/AppStyling.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/Icons.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Resources/InputForm.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
