--- a/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
+++ b/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
@@ -2,6 +2,9 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:views="clr-namespace:KretaDesktop.View"
                     xmlns:viewmodels="clr-namespace:KretaDesktop.ViewModel">
+    <DataTemplate DataType="{x:Type viewmodels:HeaderAppNameViewModel}">
+        <views:HeaderAppName></views:HeaderAppName>
+    </DataTemplate>
     <DataTemplate DataType="{x:Type viewmodels:HeaderWithContentListViewModel}">
         <views:HeaderWithContentList></views:HeaderWithContentList>
     </DataTemplate>
