--- a/KretaDesktop/View/HeaderWithContentList.xaml
+++ b/KretaDesktop/View/HeaderWithContentList.xaml
@@ -6,16 +6,18 @@
              xmlns:local="clr-namespace:KretaDesktop.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid Background="{DynamicResource HeaderBackgroundColor}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="35" MinHeight="5" MaxHeight="35"></RowDefinition>
+            <RowDefinition Height="90"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <ContentControl Grid.Row="0" Content="{Binding HeaderAppName}"></ContentControl>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Button Style="{DynamicResource HeaderButtonMenuItemEllpse}" Command="{Binding UpdateContentView}" CommandParameter="Tantargyak">Tantárgyak</Button>
             <Button Style="{DynamicResource HeaderButtonMenuItemEllpse}">Tanárok</Button>
             <Button Style="{DynamicResource HeaderButtonMenuItemEllpse}">Osztályok</Button>
         </StackPanel>
-        <ContentControl Grid.Row="1" Content="{Binding SelectedView}"></ContentControl>
+        <ContentControl Grid.Row="2" Content="{Binding SelectedView}"></ContentControl>
     </Grid>
 </UserControl>
